--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               development. Later as part of this role I moved more towards development and maintenance
               libraries supporting building smart contracts with CosmWasm. On this position:
               <ul>
-                <li>I was working on smart contracts for <i>Tgrade</i> core.</li>
+                <li>I was working on smart contracts for <i>TGrade</i> core.</li>
                 <li>I was involved in development of <i>Mesh Security</i>.</li>
                 <li>I proposed, designed and pushed to main product line the <i>Sylvia Framework</i></li>
                 <li>I developed and maintained supporting CosmWasm libraries, mostly the
@@ -160,8 +160,8 @@
               The project implementing <i>5g core</i> in Rust was carried over from the client
               in-house team. Initially Luxoft was responsible for
               small <i>C++</i> part, and my role was to make sure that the team is ready to take over the Rust
-              components as well. In the project I was involved in day-to-day development, but my unique
-              responsibility was to teach Rust. It was including weekly/bi-weekly presentation, one-to-one
+              components as well. In the project I was involved in day-to-day development. On top of that I
+              ran weekly/bi-weekly presentation, did one-to-one
               coaching, pair programming, and in-depth code review. I was also taking care of the overall
               Rust code quality.
             </div>
