--- a/index.html
+++ b/index.html
@@ -51,16 +51,17 @@
               responsibilities.
               My day-to-day work includes:
               <ul>
-                <li>Leading a team of 7 Software Developers encouraging high coding standards.</li>
-                <li>Full product ownership over supporting CosmWasm libraries including
+                <li>Leading a team of 7 Software Developers, encouraging high coding standards.</li>
+                <li>Full product ownership over supporting CosmWasm libraries, including
                   <i><a href="https://docs.rs/cw-multi-test/latest/cw_multi_test/">cw-multi-test</a></i>,
                   <i><a href="https://docs.rs/sylvia/latest/sylvia/">sylvia</a></i>,
                   <i><a href="https://docs.rs/storey/latest/storey/">storey</a></i>.
                 </li>
-                <li>Process management including redefining recruitment and onboarding process for technical employees.
+                <li>Process management, including redefining recruitment and onboarding processes for technical
+                  employees.
                 </li>
                 <li>Communication with existing and potential clients, including work reporting.</li>
-                <li>People management, with focus on keeping people morale, and cleaning up obstacles.</li>
+                <li>People management, focused on keeping people morale, and cleaning up obstacles.</li>
                 <li>Involved in staffing decisions.</li>
               </ul>
             </div>
@@ -74,16 +75,18 @@
                   GmbH</a></div>
               <div class="dates">2021 – 2023</div>
             </div>
-            <div class="summary">I started in Confio as a Rust developer focusing on smart contracts
-              development. Later as part of this role I moved more towards development and maintenance
-              libraries supporting building smart contracts with CosmWasm. On this position:
+            <div class="summary">I started in Confio as a Rust developer, focusing on smart contracts
+              development. Later as, part of this role, I moved towards development and maintenance
+              libraries supporting building smart contracts with <i>CosmWasm</i>. In this position:
               <ul>
-                <li>I was working on smart contracts for <i>TGrade</i> core.</li>
-                <li>I was involved in development of <i>Mesh Security</i>.</li>
-                <li>I proposed, designed and pushed to main product line the <i>Sylvia Framework</i></li>
+                <li>I worked on smart contracts for <i>TGrade</i> core.</li>
+                <li>I was involved in the development of <i>Mesh Security</i>.</li>
+                <li>I proposed, designed, and pushed <i>Sylvia Framework</i> to the main product line.</li>
                 <li>I developed and maintained supporting CosmWasm libraries, mostly the
                   <i><a href="https://docs.rs/cw-multi-test/latest/cw_multi_test/">cw-multi-test</a></i> crate.
-                <li>I started CosmWasm Academy, created a course about building smart contract with CosmWasm</li>
+                </li>
+                <li>I started <i>CosmWasm Academy</i>, recorded and published courses about building smart contracts
+                  with <i>CosmWasm</i></li>
               </ul>
             </div>
           </div>
@@ -96,15 +99,14 @@
               </div>
               <div class="dates">2018 - present</div>
             </div>
-            <div class="summary">It is not really commercial work, but for sure part-time job. I am coorganizing the
-              <i>Rust Wrocław Meetup</i> - local Rust community gatherings with experience sharing and networking.
-              It involves:
+            <div class="summary">It is not commercial work but a real part-time job. I co-organize the <i>Rust Wrocław
+                Meetup</i> - local Rust community gatherings with experience sharing and networking. It involves:
               <ul>
-                <li>Organizing speakers, setting up Meetups lineup.</li>
-                <li>Organizing places to meet, looking for cooperations.</li>
+                <li>Organizing speakers and setting up Meetups lineup.</li>
+                <li>Organizing places to meet, looking for cooperation.</li>
                 <li>Speaking myself on the Meetup regularly.</li>
-                <li>Making sure domain is alive, Meetup is there, Slack is working</li>
-                <li>Coorganizing the Rusty Days conference</li>
+                <li>Make sure the domain is alive, Meetup is there, and Slack is working.</li>
+                <li>Co-organizing the online Rusty Days conference</li>
               </ul>
 
             </div>
@@ -119,20 +121,17 @@
               <div><span class="position">Rust Trainer</span> @ <a href="https://sii.pl">Sii</a></div>
               <div class="dates">2021</div>
             </div>
-            <div class="summary">I prepared the 2-days Rust training for developers with <i>C++</i> background,
-              and executed it twice, receiving strongly positive feedback. Training was focused on:
-              <ul>
-                <li>Building fundamentals on Rust basic syntax basing on trainees prior experience.</li>
-                <li>Making sure trainees understand how concepts similar to what they know differ from their
-                  counterparts
-                  in
-                  other stacks.</li>
-                <li>Providing basic, but solid intuition on the Rust novelties: <i>borrow checker</i>, <i>traits</i>,
-                  <i>enums</i> as algebraic types
+            <div class="summary">I prepared the 2-day <i>Rust</i> training for developers with <i>C++</i> and
+              <i>Python</i> backgrounds and executed it twice. I received strongly positive feedback. The training was
+              focused on: <ul>
+                <li>Building fundamentals on <i>Rust</i> basic syntax based on trainees' prior experience.</li>
+                <li>Ensurig trainees understand how familiar concepts differ from those in other
+                  stacks.</li>
+                <li>Providing basic but solid intuition on the <i>Rust</i> novelties: <i>borrow checker</i>,
+                  <i>traits</i>, and <i>enums</i> as algebraic types.
                 </li>
-                <li>Practical workshop-style teaching showcasing contepts on real code and contesting trainees with
-                  further
-                  excercises</li>
+                <li>Practical workshop-style teaching showcasing concepts on real code and contesting trainees with
+                  further exercises.</li>
               </ul>
             </div>
           </div>
@@ -156,14 +155,15 @@
               <div class="dates">2020</div>
             </div>
             <div class="summary">
-              I was hired to Luxoft for a specific task - to take care of the Rust knowledge in the team.
-              The project implementing <i>5g core</i> in Rust was carried over from the client
-              in-house team. Initially Luxoft was responsible for
-              small <i>C++</i> part, and my role was to make sure that the team is ready to take over the Rust
-              components as well. In the project I was involved in day-to-day development. On top of that I
-              ran weekly/bi-weekly presentation, did one-to-one
-              coaching, pair programming, and in-depth code review. I was also taking care of the overall
-              Rust code quality.
+              I was hired by Luxoft for a specific task - to take care of the <i>Rust</i> knowledge in the team. The
+              project
+              implementing <i>5g core</i> in Rust was carried over from the client's in-house team. Initially, Luxoft
+              was
+              responsible for the small <i>C++</i> part, and my role was to ensure the team was also ready to take over
+              the
+              <i>Rust</i> components. In the project, I was involved in day-to-day development. On top of that, I ran
+              weekly/bi-weekly presentations and did one-to-one coaching, pair programming, and in-depth code review. I
+              also took care of the overall Rust code quality. I was involved in recruiting new Rustaceans to the team.
             </div>
           </div>
         </div>
