--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <i><a href="https://docs.rs/cw-multi-test/latest/cw_multi_test/">cw-multi-test</a></i> crate.
                 </li>
                 <li>I started <i>CosmWasm Academy</i>, recorded and published courses about building smart contracts
-                  with <i>CosmWasm</i></li>
+                  with <i>CosmWasm</i>.</li>
               </ul>
             </div>
           </div>
@@ -106,7 +106,7 @@
                 <li>Organizing places to meet, looking for cooperation.</li>
                 <li>Speaking myself on the Meetup regularly.</li>
                 <li>Make sure the domain is alive, Meetup is there, and Slack is working.</li>
-                <li>Co-organizing the online Rusty Days conference</li>
+                <li>Co-organizing the online Rusty Days conference.</li>
               </ul>
 
             </div>
@@ -233,11 +233,14 @@
         <h2>Skills</h2>
         <ul>
           <li>Rust</li>
+          <li>E2E Software development processes</li>
           <li>Software architecture</li>
-          <li>Linux</li>
-          <li>Blockchain</li>
+          <li>Teaching</li>
           <li>People management</li>
           <li>Project management</li>
+          <li>Linux</li>
+          <li>Blockchain</li>
+          <li>Grasp on lot of programming languages: C++, Haskell, Python, Lua, and more</li>
         </ul>
 
         <h2>Speaker activity</h2>
