--- a/index.html
+++ b/index.html
@@ -17,22 +17,32 @@
 <body>
   <div class="wrapper">
     <div class="cv-info">
-      <h1>Bartłomiej Kuras</h1>
+      <div class="head">
+        <div>
+          <h1>Bartłomiej Kuras</h1>
 
-      <ul>
-        <li><span class="nf nf-fa-location_dot icon"></span>Wrocław (Poland)</li>
-        <li><span class="nf nf-fa-mobile_phone icon"></span>+45 530 072 551</li>
-        <li><span class="nf nf-md-email_outline icon"></span><a
-            href="mailto:bartlomiej.kuras@o2.pl">batlomiej.kuras@o2.pl</a>
-        </li>
-        <li><span class="nf nf-cod-github icon"></span><a href="https://github.com/hashedone">/hashedone</a></li>
-        <li><span class="nf nf-dev-linkedin icon"></span><a href="https://linkedin.com/in/hashedone">/hashedone</a></li>
-      </ul>
+          <ul>
+            <li><span class="nf nf-fa-location_dot icon"></span>Wrocław (Poland)</li>
+            <li><span class="nf nf-fa-mobile_phone icon"></span>+45 530 072 551</li>
+            <li><span class="nf nf-md-email_outline icon"></span><a
+                href="mailto:bartlomiej.kuras@o2.pl">batlomiej.kuras@o2.pl</a>
+            </li>
+            <li><span class="nf nf-cod-github icon"></span><a href="https://github.com/hashedone">/hashedone</a></li>
+            <li><span class="nf nf-dev-linkedin icon"></span><a href="https://linkedin.com/in/hashedone">/hashedone</a>
+            </li>
+          </ul>
 
-      <div class="summary">
-        Technology-focused Rustacean with experience in telco, microservices, finance, and blockchain, interested in AI
-        and programming languages.
+          <div class="summary">
+            Technology-focused Rustacean with experience in telco, microservices, finance, and blockchain, interested in
+            AI
+            and programming languages.
+          </div>
+
+        </div>
+
+        <img src="avatar.jpg">
       </div>
+
     </div>
 
     <div class="cv-container">
@@ -75,8 +85,8 @@
                   GmbH</a></div>
               <div class="dates">2021 – 2023</div>
             </div>
-            <div class="summary">I started in Confio as a Rust developer, focusing on smart contracts
-              development. Later as, part of this role, I moved towards development and maintenance
+            <div class="summary">I started in Confio as a Rust developer, focusing on smart contracts. Later as, part of
+              this role, I moved towards development and maintenance
               libraries supporting building smart contracts with <i>CosmWasm</i>. In this position:
               <ul>
                 <li>I worked on smart contracts for <i>TGrade</i> core.</li>
