--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </li>
             <li><span class="nf nf-cod-github icon"></span><a href="https://github.com/hashedone">/hashedone</a></li>
             <li><span class="nf nf-dev-linkedin icon"></span><a href="https://linkedin.com/in/hashedone">/hashedone</a>
+            <li><span class="nf nf-md-web icon"></span><a href="https://hashedone.github.io">hashedone.github.io</a>
             </li>
           </ul>
 
