Removed phone, added clause

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
           <ul>
             <li><span class="nf nf-fa-location_dot icon"></span>Wrocław (Poland)</li>
-            <li><span class="nf nf-fa-mobile_phone icon"></span>+45 530 072 551</li>
             <li><span class="nf nf-md-email_outline icon"></span><a
                 href="mailto:bartlomiej.kuras@o2.pl">batlomiej.kuras@o2.pl</a>
             </li>
@@ -281,6 +280,11 @@
       </div>
     </div>
   </div>
+  </div>
+
+  <div class="clause">
+    <p>I hereby give consent for my personal data to be processed for the purpose of conducting
+      recruitment for the position for which I am applying.</p>
   </div>
 
 </body>
