--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="cv-entry">
             <div class="title">
               <div><span class="position">Rust Developer</span> @ <a href="https://gpwtech.pl">GPW Tech</a></div>
-              <div class="dates">2020-2021</div>
+              <div class="dates">2020 - 2021</div>
             </div>
           </div>
         </div>
@@ -183,7 +183,7 @@
             <div class="title">
               <div><span class="position">Rust Developer</span> @ <a href="https://www.anixe.pl/">Anixe</a>
               </div>
-              <div class="dates">2018-2019</div>
+              <div class="dates">2018 - 2019</div>
             </div>
           </div>
         </div>
@@ -194,7 +194,7 @@
               <div><span class="position">C++/Python Developer</span> @ <a
                   href="https://www.credit-suisse.com/pl/pl.html">Credit Suisse</a>
               </div>
-              <div class="dates">2016-2018</div>
+              <div class="dates">2016 - 2018</div>
             </div>
           </div>
         </div>
@@ -205,7 +205,7 @@
               <div><span class="position">C++ Developer</span> @ <a href="https://www.imaginationtech.com/">Imaginations
                   Technologies</a>
               </div>
-              <div class="dates">2015-2016</div>
+              <div class="dates">2015 - 2016</div>
             </div>
           </div>
         </div>
@@ -215,7 +215,7 @@
             <div class="title">
               <div><span class="position">C++ Developer</span> @ <a href="https://www.delaval.com">DeLaval</a>
               </div>
-              <div class="dates">2014-2015</div>
+              <div class="dates">2014 - 2015</div>
             </div>
           </div>
         </div>
@@ -226,7 +226,7 @@
             <div class="title">
               <div><span class="position">C++ Developer</span> @ <a href="https://www.nokia.com/">Nokia</a>
               </div>
-              <div class="dates">2012-2014</div>
+              <div class="dates">2012 - 2014</div>
             </div>
           </div>
         </div>
