--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <i>Python</i> backgrounds and executed it twice. I received strongly positive feedback. The training was
               focused on: <ul>
                 <li>Building fundamentals on <i>Rust</i> basic syntax based on trainees' prior experience.</li>
-                <li>Ensurig trainees understand how familiar concepts differ from those in other
+                <li>Ensuring trainees understand how familiar concepts differ from those in other
                   stacks.</li>
                 <li>Providing basic but solid intuition on the <i>Rust</i> novelties: <i>borrow checker</i>,
                   <i>traits</i>, and <i>enums</i> as algebraic types.
@@ -250,7 +250,7 @@
           <li>Project management</li>
           <li>Linux</li>
           <li>Blockchain</li>
-          <li>Grasp on lot of programming languages: C++, Haskell, Python, Lua, and more</li>
+          <li>Grasp of lot of programming languages: C++, Haskell, Python, Lua, and more</li>
         </ul>
 
         <h2>Speaker activity</h2>
