--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <ul>
             <li><span class="nf nf-fa-location_dot icon"></span>Wrocław (Poland)</li>
             <li><span class="nf nf-md-email_outline icon"></span><a
-                href="mailto:bartlomiej.kuras@o2.pl">batlomiej.kuras@o2.pl</a>
+                href="mailto:bartlomiej.kuras@o2.pl">bartlomiej.kuras@o2.pl</a>
             </li>
             <li><span class="nf nf-cod-github icon"></span><a href="https://github.com/hashedone">/hashedone</a></li>
             <li><span class="nf nf-dev-linkedin icon"></span><a href="https://linkedin.com/in/hashedone">/hashedone</a>
@@ -62,7 +62,7 @@
               My day-to-day work includes:
               <ul>
                 <li>Leading a team of 7 Software Developers, encouraging high coding standards.</li>
-                <li>Full product ownership over supporting CosmWasm libraries, including
+                <li>Full product ownership over supporting <i>CosmWasm</i> libraries, including
                   <i><a href="https://docs.rs/cw-multi-test/latest/cw_multi_test/">cw-multi-test</a></i>,
                   <i><a href="https://docs.rs/sylvia/latest/sylvia/">sylvia</a></i>,
                   <i><a href="https://docs.rs/storey/latest/storey/">storey</a></i>.
@@ -71,7 +71,7 @@
                   employees.
                 </li>
                 <li>Communication with existing and potential clients, including work reporting.</li>
-                <li>People management, focused on keeping people morale, and cleaning up obstacles.</li>
+                <li>People management, focused on keeping up people's morale, and cleaning up obstacles.</li>
                 <li>Involved in staffing decisions.</li>
               </ul>
             </div>
@@ -131,7 +131,7 @@
               <div><span class="position">Rust Trainer</span> @ <a href="https://sii.pl">Sii</a></div>
               <div class="dates">2021</div>
             </div>
-            <div class="summary">I prepared the 2-day <i>Rust</i> training for developers with <i>C++</i> and
+            <div class="summary">I prepared a 2-day <i>Rust</i> training for developers with <i>C++</i> and
               <i>Python</i> backgrounds and executed it twice. I received strongly positive feedback. The training was
               focused on: <ul>
                 <li>Building fundamentals on <i>Rust</i> basic syntax based on trainees' prior experience.</li>
