Revert changes to Philabs section and restore the previous state for review.
Signed-off-by: Bartłomiej Kuras <hash.deb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -51,15 +51,39 @@
           <div class="cv-entry">
             <div class="title">
               <div>
+                <span class="position">Head of Engineering</span> @ <a href="https://philabs.xyz">Confio GmbH</a>
+              </div>
+              <div class="dates">2025</div>
+            </div>
+            <div class="summary">
+              In this role, I took full responsibility for the technical aspects of the <a href="https://www.boltliquidity.io/">Bolt Liquidity</a> product. My contributions included designing the protocol and mathematical foundations, establishing development processes, and maintaining high standards. I led by example, actively participating in the development lifecycle.
+              <ul>
+                <li><strong>Leadership:</strong> Directed a team of up to 5 developers, fostering a culture of excellence.</li>
+                <li><strong>Product Ownership:</strong> Defined product requirements and ensured team-wide understanding.</li>
+                <li><strong>Strategic Planning:</strong> Balanced development speed with long-term maintainability.</li>
+                <li><strong>Technical Contributions:</strong> Actively contributed to the codebase and conducted code reviews.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+
+          <div class="cv-entry">
+            <div class="title">
+              <div>
                 <span class="position">Engineering
                   Manager</span> @ <a href="https://confio.gmbh">Confio
                   GmbH</a>
               </div>
-              <div class="dates">2023 - present</div>
+              <div class="dates">2023 - 2025</div>
             </div>
-            <div class="summary">I'm currently in a role involving people management and product ownership
-              responsibilities.
-              My day-to-day work includes:
+            <div class="summary">A role involving people management and product ownership
+              responsibilities. Here I learned how to work with people
+              on completely different level. I was not only involved in architectural decisions, but I was also responsible
+              for taking care of people. For the first time for long time I got completely new set of challanges, that
+              never concerned me as a Developer or even a leader. Still, as I grew here from the senior developer I conisder
+              leading by example a huge part of my contribution to this company.
+              My day-to-day work included:
               <ul>
                 <li>Leading a team of 7 Software Developers, encouraging high coding standards.</li>
                 <li>Full product ownership over supporting <i>CosmWasm</i> libraries, including
@@ -87,7 +111,8 @@
             </div>
             <div class="summary">I started in Confio as a Rust developer, focusing on smart contracts. Later as, part of
               this role, I moved towards development and maintenance
-              libraries supporting building smart contracts with <i>CosmWasm</i>. In this position:
+              libraries supporting building smart contracts with <i>CosmWasm</i>. 
+              In this position:
               <ul>
                 <li>I worked on smart contracts for <i>TGrade</i> core.</li>
                 <li>I was involved in the development of <i>Mesh Security</i>.</li>
@@ -109,8 +134,10 @@
               </div>
               <div class="dates">2018 - present</div>
             </div>
-            <div class="summary">It is not commercial work but a real part-time job. I co-organize the <i>Rust Wrocław
-                Meetup</i> - local Rust community gatherings with experience sharing and networking. It involves:
+            <div class="summary">I was co-organizing the <i>Rust Wrocław
+                Meetup</i> - local Rust community gatherings with experience sharing and networking. There is no so much
+                happening with this anymore, however around 2019-2023 when I was highly actievely organizing Meetups, we
+                were running the 2-talks evening every month, being the stronges Rust community in Poland. My role involves:
               <ul>
                 <li>Organizing speakers and setting up Meetups lineup.</li>
                 <li>Organizing places to meet, looking for cooperation.</li>
@@ -118,7 +145,7 @@
                 <li>Make sure the domain is alive, Meetup is there, and Slack is working.</li>
                 <li>Co-organizing the online Rusty Days conference.</li>
               </ul>
-
+                My work around the Rust Meetup is pro bono.
             </div>
           </div>
         </div>
@@ -153,6 +180,18 @@
               <div><span class="position">Rust Developer</span> @ <a href="https://gpwtech.pl">GPW Tech</a></div>
               <div class="dates">2020 - 2021</div>
             </div>
+            <div class="summary">
+              GPW was rather short episode in my career, I was working there on the Wats stock exchange system that
+              was supposed to replace the system GPW - polish national currency exchange system - was using. As a
+              stock exchange, the application was supposed mostly to maintain the offer book and match transactions
+              on it. While a system at the glance is simply, the huge part of it is how much it relies on safety and
+              performance. Currency exchange is dealing with huge money, and any funtionality bugs could compromize
+              high currency volumes. On the other hand it has to be blazingly fast - in the HFT trading world, the
+              winner on the CEX is often the one with the shortes fiber, and the system has to be prepared for such load.
+              In the project I had to utilize all my knowledge about performance on many levels. This is also a place where
+              I actually had to work with justified unsafe code, so understanding the soundness of unsafe Rust layers was
+              critical.
+            </div> 
           </div>
         </div>
 
@@ -166,12 +205,9 @@
             </div>
             <div class="summary">
               I was hired by Luxoft for a specific task - to take care of the <i>Rust</i> knowledge in the team. The
-              project
-              implementing <i>5g core</i> in Rust was carried over from the client's in-house team. Initially, Luxoft
-              was
-              responsible for the small <i>C++</i> part, and my role was to ensure the team was also ready to take over
-              the
-              <i>Rust</i> components. In the project, I was involved in day-to-day development. On top of that, I ran
+              project implementing <i>5g core</i> in Rust was carried over from the client's in-house team. Initially, Luxoft
+              was responsible for the small <i>C++</i> part, and my role was to ensure the team was also ready to take over
+              the <i>Rust</i> components. In the project, I was involved in day-to-day development. On top of that, I ran
               weekly/bi-weekly presentations and did one-to-one coaching, pair programming, and in-depth code review. I
               also took care of the overall Rust code quality. I was involved in recruiting new Rustaceans to the team.
             </div>
@@ -185,6 +221,15 @@
               </div>
               <div class="dates">2018 - 2019</div>
             </div>
+            <div class="summary">
+              In Anixe I was working on the searching engine for hotels booking system. The product was about managing
+              the system knowledge about hotels offer, and unifying it to then find the best stay for the given conditions.
+              The challange was that hotels uses different way to define their prices, and we had to define the flexible
+              system. On top of that, system had to be performant - hardware running the search engine was limited, so
+              it needed to leverage the Rust high performance premise to keep the high throughput.
+              All my work was around backend Rust development, with high autonomy. Most of the time me and the team lead
+              was the only two people taking care of this particular product part.
+            </div>
           </div>
         </div>
 
@@ -195,6 +240,18 @@
                   href="https://www.credit-suisse.com/pl/pl.html">Credit Suisse</a>
               </div>
               <div class="dates">2016 - 2018</div>
+            </div>
+            <div class="summary">
+              Credit Suisse was one of the most interersting steps in my career. I was involved in the product that was
+              full rewrite of the credit-rist estimation engine. The product was supposed to analyze transactions
+              on the stock that happened particular day, to build base for predicting the risk of future transactions.
+              One of the most important requirements for the product was the high performance - the number of transactions
+              to analyze was overwhelming, and the goal was to get all of calculation done by the next trading day start.
+              However calculation correctness was not less important - the outcome was not only strongly affecting the
+              further Quants efficiency, but also the way of the credit risk measurement is strongly controlled by
+              goverments, so correctess of the implementation was relevant from legal standpoint. Finally the product stability
+              was also key. As the calculations had to be correct and fast any stability bugs could highly affect the outcome value
+              by delying it, or excluding some batch of trades from calculations.
             </div>
           </div>
         </div>
@@ -207,6 +264,15 @@
               </div>
               <div class="dates">2015 - 2016</div>
             </div>
+            <div class="summary">
+              In Imagination Technologies I was working on the GPU simulator. It was multipurpose software allowing to
+              test planned changes in GPU or test drivers without involving the hardware on its own. The implementation
+              was done in very low level C++ dialect that was somewhat closer to working with C, to avoid any overhead,
+              keeping simulation close to realtime. The simulator was written using SystemC library being sort of a
+              midpoint between VHDL hardware description and the hardware prototype. Also in this project I had unique
+              opportunity working with Perforce version control giving me POV of working with less common version controll
+              learning different team workflows.
+            </div>
           </div>
         </div>
 
@@ -216,6 +282,21 @@
               <div><span class="position">C++ Developer</span> @ <a href="https://www.delaval.com">DeLaval</a>
               </div>
               <div class="dates">2014 - 2015</div>
+            </div>
+            <div class="summary">
+              DeLaval is more a hardware company owning majority of milk-farming market with a very small Software
+              Development department I was a part of. The products of DeLaval are targetted towards milking farms,
+              and they include moslty hardware around that - automated solutions for Cows feeding, health maintenance,
+              milking, but also - keeping them happy! My role in DeLaval was revolving around one of such problems -
+              the prototype of rotary carousel milking cows continously. Here I was working across different stack levels.
+              I had to learn how to program simple PLCs making sure that when product mallfunctions, the operator or animal
+              doesn't get hurt. Also I was working on drivers maintaining the communication with basic hardware - ensuring
+              proper rotary speed, detaching milking station when needed, and on higher level instrumenting entire process.
+              Also the product was used by the human operator, so there was also communication with our UI application was
+              a part of the solution. Also in this company for the first time I had some impact on decision making. Regardless
+              of being rather mid-level developer, I quickly proven my engagement and analitical thinking and our architect was
+              often keen to know my opinion to take it in consideration and even if not use it as a whole - use as a base
+              for the solution he later refined.
             </div>
           </div>
         </div>
@@ -227,6 +308,17 @@
               <div><span class="position">C++ Developer</span> @ <a href="https://www.nokia.com/">Nokia</a>
               </div>
               <div class="dates">2012 - 2014</div>
+            </div>
+            <div class="summary">
+              My career starter, Nokia was a place where I learned how Software is built. Started as a working student,
+              left the company as a solid mid developer. I was working mostly in OAM - operational and maintenance
+              component which was basicaly high level OS operating the BTS module. On one hand it was communicating
+              with hardware - antena line devices, radio devices, on the other with the network management system,
+              all of that maintaining the fault recovery with proper fault management and logging. My role there
+              was mostly simply writting code to the provided spec and debugging the system to fix issues reported but
+              BTS operators. Here I not only develop the strong function for my Software Developmnet knowledge including
+              C++ stack understanding and learning common tools and patterns, but what is equally important, here is
+              where I learnt to work with another people on the single codebase.
             </div>
           </div>
         </div>
